# vconvert

./: README.md  meson.build  package.sh  vconvert_0.1.0_amd64.deb
src/: main.c  vconvert.gresource.xml
src/domain/: media_types.c  media_types.h
src/infrastructure/: audio_converter.c  audio_converter.h  ffmpeg_core.c  ffmpeg_core.h  image_converter.c  image_converter.h  video_converter.c  video_converter.h
src/presentation/: style.css  theme_manager.c  window.c  window.h
src/usecases/: converter.c  converter.h
vconvert_0.1.0_amd64/DEBIAN/: control
vconvert_0.1.0_amd64/usr/share/applications/: vconvert.desktop
